--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="robots" content="index,follow">
 <meta name="googlebot" content="index,follow">
-<title>Belajar Masak</title>
+<title>Resep Masak</title>
 <meta name="url" content="https://pinresep.github.io/" />
 <meta property="og:url" content="https://pinresep.github.io/">
 <link rel="canonical" href="https://pinresep.github.io/">
@@ -28,16 +28,16 @@
 <link rel="icon" type="image/png" href="/logo.png">
 <link rel="icon" type="image/x-icon" sizes="16x16 32x32" href="/favicon.ico">
 <link rel="shortcut icon" href="/favicon.ico">
-<script src='//ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js'></script><link href="https://pinresep.github.io/rss.xml" rel="alternate" type="application/rss+xml" title="Belajar Masak" />
-<link href="https://pinresep.github.io/rss.xml" rel="feed" type="application/rss+xml" title="Belajar Masak" />
+<script src='//ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js'></script><link href="https://pinresep.github.io/rss.xml" rel="alternate" type="application/rss+xml" title="Resep Masak" />
+<link href="https://pinresep.github.io/rss.xml" rel="feed" type="application/rss+xml" title="Resep Masak" />
     
 <script type="application/ld+json">
 {
     "@context": "http://schema.org",
     "@type": "WebSite",
-    "name": "Belajar Masak",
+    "name": "Resep Masak",
     "url": "https:\/\/pinresep.github.io",
-    "description": "Resep Lengkap Harian - Belajar Masak",
+    "description": "Resep Lengkap Harian - Resep Masak",
     "thumbnailUrl": "https:\/\/pinresep.github.io\/logo.png",
     "license": ""
 }
